--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    
+    <div class="nav-container">
+        <h1 class="name">Karuppusamy S Portfolio</h1>
+        <nav>
+            <ul class="nav-elements">
+                <div >
+                    <li><a href="Skills">Skills</a></li>
+                    <li><a href="Resume">Resume</a></li>
+                    <li><a href="Projects">Projects</a></li>
+                    <li><a href="Acheivements">Acheivements</a></li>
+                    <li><a href="Contact">Contact</a></li>
+                <div>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
